HTTPCLIENT-943: CacheClient Javadoc and Constants usage cleanup Contributed by Joe Campbell <joseph.r.campbell at gmail.com>
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpclient/trunk@948754 13f79535-47bb-0310-9956-ffa450edef68